# 2024-advent-of-code

./: .editorconfig  .gitignore  .pre-commit.yaml  LICENSE  README.md  create_new_day.sh  makefile  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
advent_of_code/: __init__.py
advent_of_code/day_1/: code.py  part_2.py  test_day_1.py
advent_of_code/day_2/: part_1.py  part_2.py  test_day_2.py
advent_of_code/day_7/: part_1.py  part_2.py  test_day_7.py
tests/: __init__.py  test_day_1.py
