[tool]
[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
homepage = "https://github.com/tanglisha/2024-advent-of-code"
description = "."
authors = ["Liz Dahlstrom"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
    { include = "advent_of_code" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

black  = { version = "^24.10.0", optional = true}
isort  = { version = "^5.13.2", optional = true}
flake8  = { version = "^7.1.1", optional = true}
flake8-docstrings = { version = "^1.7.0", optional = true }
mypy = {version = "^1.13.0", optional = true}
pytest  = { version = "^8.3.4", optional = true}
tox  = { version = "^4.23.2", optional = true}
virtualenv  = { version = "^20.28.0", optional = true}
pip  = { version = "^24.3.1", optional = true}
twine  = { version = "^6.0.1", optional = true}
pre-commit = {version = "^4.0.1", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

[tool.black]
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
